[package]
name = "unboundnotes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mongodb = { versoin = "2.3.1", features = ["tokio-runtime", "bson-uuid-0_8"] }
tokio = { version = "1.21.2", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-graphql = { version = "4.0.14", features = ["uuid", "apollo_tracing", "apollo_persisted_queries", "log", "unblock", "chrono", "secrecy"] }
actix-web = "4.2.1"
async-graphql-actix-web = "4.0.14"
uuid = {version =  "1.1.2", features=["serde", "v4"]}
thiserror = "1.0.37"
anyhow = "1.0.65"
pretty_env_logger = "0.4.0"
dotenv = "0.15.0"
chrono = "0.4.22"
rust-argon2 = "1.0"
secrecy = "0.8.0"
rand_core = { version = "0.6", features = ["std"] }
log = "0.4.17"
async-trait = "0.1.57"
bson = {version = "2.4.0", features = ["uuid-1", "serde_with", "default"]}
