[package]
name = "unboundnotes"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]

[[bin]]
name = "unboundnotes"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.21.2", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-graphql = { version = "4.0.15", features = ["uuid", "apollo_tracing", "apollo_persisted_queries", "log", "unblock", "chrono", "secrecy"] }
actix-web = "4.2.1"
async-graphql-actix-web = "4.0.15"
uuid = {version = "1.2.1", features=["serde", "v4"]}
thiserror = "1.0.37"
anyhow = "1.0.65"
pretty_env_logger = "0.4.0"
dotenvy = "0.15.6"
chrono = "0.4.22"
rust-argon2 = "1.0"
secrecy = "0.8.0"
rand_core = { version = "0.6", features = ["std"] }
log = "0.4.17"
async-trait = "0.1.58"
jwt = "0.16.0"
hmac = "0.12.1"
sha2 = "0.10.6"
appconfig_derive = { path = "appconfig_derive" }
static_assertions = "1.1.0"
tokio-postgres = {version = "0.7.7", features = ["with-chrono-0_4", "with-serde_json-1", "with-uuid-1"]}
diesel = { version = "2.0.2", features = ["postgres", "extras", "nightly-error-messages"] }
r2d2 = "0.8.10"
